Fix Java deprecations (#640)
Signed-off-by: Wouter Born <github@maindrain.net>